Add github check

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # nemsr
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/byu-transpolab/nemsr/workflows/R-CMD-check/badge.svg)](https://github.com/byu-transpolab/nemsr/actions)
 <!-- badges: end -->
 
 The goal of nemsr is to ...
